--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -59,5 +59,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A
-          git commit -m "update and push"
+          git commit -m "update and push" || true
           git push
