--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           token: ${{ secrets.WORKFLOW_TOKEN }}
 
-      - name: Tailscale Action
+      - name: Setup Tailscale
         uses: tailscale/github-action@v2
         with:
           authkey: ${{ secrets.TS_AUTH_KEY }}
@@ -30,8 +30,9 @@ jobs:
       # https://stackoverflow.com/questions/61096521/how-to-use-gpg-key-in-github-actions
       - name: Configure GPG Key
         if: ${{ steps.status.outputs.online == '0' && env.COUNT > 3 }}
+        # https://superuser.com/questions/1325862/gnupg2-suddenly-throwing-error-building-skey-array-no-such-file-or-directory
         run: |
-          echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --import
+          echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --batch --import
         env:
           GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
 
@@ -59,5 +60,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A
-          git commit -m "update and push" || true
+          git commit -m "CI: update and push COUNT: ${{ env.COUNT }} " || true
           git push
